<resources>
    <string name="app_name">GreenGuardian</string>
    <string name="splash_logo_desc">Logo</string>
    <string name="splash_text">Protegiendo nuestra comunidad,\njuntos.</string>
    <string name="login_email_label">Email</string>
    <string name="login_email_hint">Ingresa tu email</string>
    <string name="login_password_label">Contraseña</string>
    <string name="login_password_hint">Ingresa tu contraseña</string>
    <string name="login_no_account">¿No tienes cuenta?</string>
    <string name="login_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="login_button_enter">Ingresar</string>
    <string name="login_register">Regístrate</string>
    <string name="error_empty_email">Ingresa tu email</string>
    <string name="error_empty_password">Ingresa tu contraseña</string>
    <string name="register_title">Crear Cuenta</string>
    <string name="register_subtitle">Únete a la comunidad que cuida nuestra ciudad.</string>
    <string name="upload_profile_photo">Subir foto de perfil</string>
    <string name="profile_photo_desc">Foto de perfil</string>
    <string name="add_photo_desc">Añadir foto</string>
    <string name="register_name_label">Nombres</string>
    <string name="register_name_hint">Ingresa tus nombres</string>
    <string name="register_lastname_paterno_label">Apellido Paterno</string>
    <string name="register_lastname_paterno_hint">Ingresa tu apellido paterno</string>
    <string name="register_lastname_materno_label">Apellido Materno</string>
    <string name="register_lastname_materno_hint">Ingresa tu apellido materno</string>
    <string name="register_dni_label">DNI</string>
    <string name="register_dni_hint">Ingresa tu DNI</string>
    <string name="register_phone_label">Teléfono</string>
    <string name="register_phone_hint">Ingresa tu número celular</string>
    <string name="register_gender_label">Género</string>
    <string name="register_gender_hint">Selecciona tu género</string>
    <string name="register_district_label">Distrito</string>
    <string name="register_district_hint">Selecciona tu distrito</string>
    <string name="register_email_label">Correo electrónico</string>
    <string name="register_email_hint">tu.correo@ejemplo.com</string>
    <string name="register_password_hint">Crea una contraseña</string>
    <string name="register_confirm_password_label">Confirmar contraseña</string>
    <string name="register_confirm_password_hint">Confirma tu contraseña</string>
    <string name="register_term_conditions">Acepto los Términos y Condiciones</string>
    <string name="register_button_enter">Registrar</string>
    <string name="register_yes_account">¿Ya tienes una cuenta? </string>
    <string name="register_login">Inicia sesión</string>
    <string name="error_empty_name">Ingresa tus nombres</string>
    <string name="error_empty_lastname_paterno">Ingresa tu apellido paterno</string>
    <string name="error_empty_lastname_materno">Ingresa tu apellido materno</string>
    <string name="error_empty_dni">Ingresa tu DNI</string>
    <string name="error_invalid_dni">El DNI debe tener 8 dígitos</string>
    <string name="error_empty_phone">Ingresa tu número de teléfono</string>
    <string name="error_invalid_phone">Número de teléfono inválido</string>
    <string name="error_empty_gender">Selecciona tu género</string>
    <string name="error_empty_district">Selecciona tu distrito</string>
    <string name="error_empty_email_register">Ingresa tu correo electrónico</string>
    <string name="error_invalid_email">Correo electrónico inválido</string>
    <string name="error_empty_password_register">Crea una contraseña</string>
    <string name="error_six_characters_password">La contraseña debe tener al menos 6 caracteres</string>
    <string name="error_empty_confirm_password">Confirma tu contraseña</string>
    <string name="error_not_match_password">Las contraseñas no coinciden</string>
    <string name="error_not_check_terms_conditions">Debes aceptar los términos y condiciones</string>
    <string-array name="gender_options">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string-array name="district_options">
        <item>Ancón</item>
        <item>Ate</item>
        <item>Barranco</item>
        <item>Breña</item>
        <item>Carabayllo</item>
        <item>Chaclacayo</item>
        <item>Chorrillos</item>
        <item>Cieneguilla</item>
        <item>Comas</item>
        <item>El Agustino</item>
        <item>Independencia</item>
        <item>Jesús María</item>
        <item>La Molina</item>
        <item>La Victoria</item>
        <item>Lince</item>
        <item>Los Olivos</item>
        <item>Lurigancho</item>
        <item>Lurín</item>
        <item>Magdalena del Mar</item>
        <item>Miraflores</item>
        <item>Pachacámac</item>
        <item>Pucusana</item>
        <item>Pueblo Libre</item>
        <item>Puente Piedra</item>
        <item>Punta Hermosa</item>
        <item>Punta Negra</item>
        <item>Rímac</item>
        <item>San Bartolo</item>
        <item>San Borja</item>
        <item>San Isidro</item>
        <item>San Juan de Lurigancho</item>
        <item>San Juan de Miraflores</item>
        <item>San Luis</item>
        <item>San Martín de Porres</item>
        <item>San Miguel</item>
        <item>Santa Anita</item>
        <item>Santa María del Mar</item>
        <item>Santa Rosa</item>
        <item>Santiago de Surco</item>
        <item>Surquillo</item>
        <item>Villa El Salvador</item>
        <item>Villa María del Triunfo</item>
    </string-array>
    <string name="onboarding_step_label">Paso 1</string>
    <string name="onboarding_step_next">Siguiente</string>
    <string name="onboarding_step_skip">Saltar</string>
    <string name="onboarding1_image_description">Ilustracion</string>
    <string name="onboarding1_subtitle">Reporta y Transforma tu\nCiudad</string>
    <string name="onboarding1_paragraph">Captura y reporta fácilmente incidentes como contaminación, residuos o daños en la infraestructura para contribuir a un mejor entorno.</string>
    <string name="onboarding2_image_description">Ilustracion</string>
    <string name="onboarding2_subtitle">Gana Puntos por cada\nReporte</string>
    <string name="onboarding2_paragraph">Cada incidente que reportes y sea verificado suma puntos a tu perfil. ¡Canjéalos por recompensas increíbles!</string>
    <string name="onboarding3_image_description">Ilustracion</string>
    <string name="onboarding3_subtitle">Tus Acciones Tienen\nRecompensa</string>
    <string name="onboarding3_paragraph">Cada reporte que haces suma puntos. ¡Canjéalos por cupones en tus tiendas locales y sostenibles favoritas!</string>
    <string name="onboarding3_reward1_text">EcoModa</string>
    <string name="onboarding3_reward1_discount">20% de Descuento en\nRopa Sostenible</string>
    <string name="onboarding3_reward1_image_des">Ropa Descuento</string>
    <string name="onboarding3_reward2_text">Biocafementos</string>
    <string name="onboarding3_reward2_discount">Café Orgánico Gratis</string>
    <string name="onboarding3_reward2_image_des">Cafe Descuento</string>
    <string name="onboarding3_reward_value">Vale 100 Puntos</string>
    <string name="main_profile_picture">Perfil Imagen</string>
    <string name="main_welcome_label">Bienvenido de nuevo,</string>
    <string name="main_user_label">Nombre del usuario</string>
    <string name="main_notification_picture">Notificaciones</string>
    <string name="main_points_label">Puntos Totales</string>
    <string name="main_points_value">$ %1$s</string>
    <string name="main_button_redeem">Canjear</string>
    <string name="main_report_picture">Reporte Imagen</string>
    <string name="main_report_value">15</string>
    <string name="main_report_text">Reportes\nRealizados</string>
    <string name="main_points_monthly_picture">Puntos Mensuales Imagen</string>
    <string name="main_points_monthly_text">Puntos Mensuales</string>
    <string name="main_points_monthly_value">350</string>
    <string name="main_community_picture">Comunidad Imagen</string>
    <string name="main_community_text">Impacto comunitario</string>
    <string name="main_community_paragraph">Tus reportes ayudan a mejorar la calidad de vida en tu vecindario.</string>
    <string name="main_people_benefited">%1$,d personas beneficiadas</string>
    <string name="main_recent_activity_title">Actividad Reciente</string>
    <string name="main_category_title">Categorías Populares</string>
    <string name="main_check_picture">Check Imagen</string>
    <string name="item_category_picture">Imagen Categoria</string>
    <string name="item_category_title">Titulo Categoria</string>
    <string name="item_category_count">%1$d reportes</string>
    <string name="item_recente_activity_picture">Actividad  Reciente Imagen</string>
    <string name="item_recente_activity_title">Titulo de la actividad</string>
    <string name="item_recente_activity_fecha">25 Jul, 2024</string>
    <string name="item_recente_activity_status">Proceso</string>
    <string name="item_menu_home">Inicio</string>
    <string name="item_menu_report">Reportes</string>
    <string name="item_menu_camera">Cámara</string>
    <string name="item_menu_chat">Chat</string>
    <string name="item_menu_cupon">Cupones</string>
    <string name="item_menu_profile">Perfil</string>
    <string name="classification_button_back">Regresar</string>
    <string name="classification_title">Clasificación IA de Reporte</string>
    <string name="classification_image_report">Imagen Incidente</string>
    <string name="classification_button_edit">Editar Imagen</string>
    <string name="classification_category_detected">Categoria Detectada</string>
    <string name="classification_peligro_detected">Peligro Detectado</string>
    <string name="classification_process_picture">Icono Proceso</string>
    <string name="classification_process_title">Análisis de IA</string>
    <string name="classification_type_detected">Tipo detectado:</string>
    <string name="classification_type_detected_text">Detectando tipo...</string>
    <string name="classification_level_risk">Nivel de Riesgo:</string>
    <string name="classification_level_risk_text">Detectando nivel de riesgo...</string>
    <string name="classification_trust">Confianza:</string>
    <string name="classification_trust_text">Calculando nivel de confianza...</string>
    <string name="classification_detections">Detecciones:</string>
    <string name="classification_detections_text">Buscando detecciones...</string>
    <string name="classification_description_ia">Descripción de IA:</string>
    <string name="classification_description_ia_text">Analizando detección...</string>
    <string name="classification_check_picture">Check Imagen</string>
    <string name="classification_check_title">Aviso de Prevención</string>
    <string name="classification_check_information">La clasificación no es automática y puedes cambiarla después. Solo hemos verificado los tóxicos.</string>
    <string name="classification_subtitle_description">Descripción del Incidente</string>
    <string name="confirm_report_button_back">Regresar</string>
    <string name="confirm_report_title">Confirmación de Reporte</string>
    <string name="confirm_report_picture_image">Resultado</string>
    <string name="confirm_report_message_success">¡Reporte enviado\nexitosamente!</string>
    <string name="confirm_report_message_success_2">¡Has ganado puntos!</string>
    <string name="confirm_report_trophy_image">Trofeo Imagen</string>
    <string name="confirm_report_points_winner">+55 puntos</string>
    <string name="confirm_report_message">por tu reporte de Riesgo Medio</string>
    <string name="confirm_report_button_reports">Ver mis reportes</string>
    <string name="confirm_report_button_another_report">Reportar otro incidente</string>
</resources>