<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/item_menu_home" />

    <item
        android:id="@+id/nav_reports"
        android:icon="@drawable/ic_reporte"
        android:title="@string/item_menu_report" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/item_menu_chat" />

    <item
        android:id="@+id/nav_rewards"
        android:icon="@drawable/ic_cupon"
        android:title="@string/item_menu_cupon" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/item_menu_profile" />
</menu>